--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
-        "bref/bref": "dev-master"
+        "bref/bref": "dev-master",
+        "bref/extra-php-extensions": "^0.11.18"
     }
 }
